[package]
name = "gf_defs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default-features = ["image"]

[dependencies]
# image = { version = "0.25.1", optional = true }
image = { version = "^0.25.1", optional = true, default-formats = false }