[package]
name = "grid_forge"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[profile.release]
debug = true

[features]
default = ['vis', 'gen', 'godot']
vis = ["dep:image"]
gen = ["dep:rand"]
godot = ["dep:godot"]

[dependencies]
num-traits = "*"
nohash = { version = "0.2.0" }
grid = { version = "0.13.*" }
image = { version = "0.25.*", optional = true, default-features = false }
rand = { version = "0.8.*", optional = true }
godot = { git = "https://github.com/godot-rust/gdext", branch = "master", optional = true }

[dev-dependencies]
bencher = "0.1.*"
rand_chacha = "0.3.*"
image = { version = "0.25.*", features = ["png"]}

[[example]]
name = "gen_collapse_singular"
path = "examples/gen_collapse_singular.rs"
doc-scrape-examples = true