[package]
name = "grid_forge_benches"
version = "0.1.0"
edition = "2021"

[profile.dev]
opt-level = 3

[dependencies]
grid_forge = { path = "../grid_forge", features = ["vis", "gen"] }
image = { version = "0.25.*", default-features = false, features = ["png"] }
rand_chacha = "0.3.*"
rand = { version = "0.8.*" }