[package]
name = "vis"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
grid_forge = { path = "../../grid_forge", features = ["vis"] }
image = { version = "^0.25.1", features = ["png"]}
rand = { version = "^0.8.5" }
rand_chacha = "0.3.*"