[package]
name = "walker"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
grid_forge = { path = "../../grid_forge", features = ["gen", "vis"] }
image = { version = "^0.25.1", features = ["bmp"]}
rand = { version = "^0.8.5" }
rand_chacha = "*"